atc: breaking-change: airways infer crossnamespace from crd scope
