# pkg/openapi/airway.golden.json
@@ -18,10 +18,6 @@
           "type": "boolean",
           "default": false
         },
-        "crossNamespace": {
-          "description": "Enable the creation of resources in multiple namespaces. May be removed in the future and inferred from CR scope.",
-          "type": "boolean"
-        },
         "fixDriftInterval": {
           "description": "Interval to requeue flight for evaluation. Self-healing mechanism.",
           "type": "string"
